--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,17 +3,24 @@ plugins {
     id 'kotlin-android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.altaie.moviesapp"
+        applicationId "com.watermelon.moviesapp"
         minSdk 26
         targetSdk 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+
+    buildFeatures {
+        dataBinding true
     }
 
     buildTypes {
@@ -40,4 +47,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation('androidx.activity:activity-ktx:1.3.1')
 }
