--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,17 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.fragment:fragment-ktx:1.3.6'
+
+    //Retrofit
+    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
+
+    //Glide
+    implementation('com.github.bumptech.glide:glide:4.12.0')
+
+    //Lottie
+    implementation('com.airbnb.android:lottie:4.1.0')
 }
