--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,12 +66,15 @@ dependencies {
     //Glide
     implementation('com.github.bumptech.glide:glide:4.12.0')
 
-    //Lottie
-    implementation('com.airbnb.android:lottie:4.2.0')
+    //lottie
+    implementation 'com.airbnb.android:lottie:4.1.0'
 
     //bottom navigation
     implementation  'io.ak1:bubbletabbar:1.0.8'
 
     // Recycler LayoutManager
     implementation('com.mig35:carousellayoutmanager:1.4.6')
+
+
+    implementation 'com.google.android.material:material:1.4.0'
 }
