--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
 
     // Recycler LayoutManager
     implementation('com.mig35:carousellayoutmanager:1.4.6')
-
+    implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
 
     implementation 'com.google.android.material:material:1.4.0'
 }
