--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
 
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
 }
